# Meta_Engineer_Arm

./: Arm_CAD.20260108-211815.FCBak  Arm_CAD.20260109-233901.FCBak  Arm_CAD.FCStd  README.md  meta_engineer_arm.urdf
blueprint/: Assembly.STEP  Base.STL  J0.STL  J5,6.STL  Link1.STL  Link2.STL  Link3.STL  claw.STL  link4.STL
engineer_arm_moveit_config/: CMakeLists.txt  package.xml
engineer_arm_moveit_config/config/: Robot.ros2_control.xacro  Robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz
engineer_arm_moveit_config/launch/: demo.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
meta_engineer_arm/: package.xml
meta_engineer_arm/launch/: gazebo.launch.py
meta_engineer_arm/meshes/: arm_cad_base_kj48jr.dae  arm_cad_link0_7pttdh.dae
moveit_config/: .setup_assistant
moveit_config/config/: Robot.srdf
moveit_config/launch/: demo.launch.py  rsp.launch.py  warehouse_db.launch.py
pkg/install/: local_setup.sh  setup.sh
pkg/log/: latest_build
pkg/src/launch/: description.launch.py  display.launch.py
pkg/src/meshes/: arm_cad_base_f6rent.dae  arm_cad_claw_asdgej.dae  arm_cad_claw_d60vqu.dae  arm_cad_claw_tuzac9.dae  arm_cad_link0_hxjlaj.dae  arm_cad_link0_plebwo.dae  arm_cad_link0_w9p8jz.dae  arm_cad_link1_cvxvb7.dae  arm_cad_link1_el1qd7.dae  arm_cad_link1_onmsj3.dae  arm_cad_link2_1j56yr.dae  arm_cad_link3_edo7o8.dae  arm_cad_link3_vomrar.dae  arm_cad_link4_jhljab.dae  arm_cad_link4_rbcbnv.dae
pkg/src/rviz/: robot_description.rviz
pkg/src/urdf/: Robot.urdf
rm_engineer_control/: package.xml
ros2_ws/src/engineer_arm_moveit_config/: .setup_assistant
ros2_ws/src/engineer_arm_moveit_config/config/: moveit_controllers.yaml  ros2_controllers.yaml
ros2_ws/src/engineer_arm_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  warehouse_db.launch.py
ros2_ws/src/meta_engineer_arm/: CMakeLists.txt
ros2_ws/src/moveit_config/: package.xml
ros2_ws/src/rm_engineer_control/: CMakeLists.txt  package.xml
ros2_ws/src/rm_engineer_control/launch/: run_subscriber.launch.py
ros2_ws/src/rm_engineer_control/src/: joint_trajectory_converter.cpp  pose_subscriber_rpy.cpp
urdf_export/overcross/: robot_meta.xml
urdf_export/urdf_export/: CMakeLists.txt  package.xml
urdf_export/urdf_export/launch/: description.launch.py  gazebo.launch.py
urdf_export/urdf_export/meshes/: arm_cad_base_dl2kre.dae  arm_cad_claw_15ag4t.dae  arm_cad_link2_pb8cvc.dae  arm_cad_link2_zjndgx.dae  arm_cad_link3_qryonz.dae  arm_cad_link4_mumi9m.dae  arm_cad_link5_ax69hh.dae  arm_cad_link5_fjvzsw.dae
urdf_export/urdf_export/urdf/: Robot.urdf
(+22 files in other folders)
